--- a/style.css
+++ b/style.css
@@ -6,7 +6,12 @@ footer {
 }
 .column {
   float: left;
-  width: 25%;
+  width: 28.33%;
+  padding: 5px;
+}
+.column2 {
+  float: left;
+  width: 15%;
   padding: 5px;
 }
 .row::after {
