--- a/style.css
+++ b/style.css
@@ -14,15 +14,20 @@ footer {
   width: 15%;
   padding: 5px;
 }
+.column3 {
+    float: left;
+    width: 24%;
+    padding: 5px;
+}
+.column4 {
+    float left;
+    width 30.33%;
+    padding 5px;
+}
 .row::after {
   content: "";
   clear: both;
   display: table;
-}
-.verticalcenter {
-    display: table-cell;
-    height: 200px;
-    vertical-align: middle;
 }
 @media screen and (max-width: 900px) {
   .column {
