--- a/style.css
+++ b/style.css
@@ -20,9 +20,9 @@ footer {
     padding: 5px;
 }
 .column4 {
-    float left;
-    width 30.33%;
-    padding 5px;
+    float: left;
+    width: 30.33%;
+    padding: 5px;
 }
 .row::after {
   content: "";
